--- a/index.html
+++ b/index.html
@@ -3,7 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiz App</title>
+    <!-- Primary Meta Tags -->
+    <title>QuizHub | Ultimate Quiz App</title>
+    <meta name="title" content="QuizHub | Ultimate Quiz App">
+    <meta name="description" content="QuizHub lets you take fun and challenging quizzes from a variety of categories. Learn, play, and test your knowledge with instant quizzes!">
+
+    <!-- Responsive Settings -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://quizhub-pied.vercel.app/">
+    <meta property="og:title" content="QuizHub | Ultimate Quiz App">
+    <meta property="og:description" content="Take quizzes from different categories like history, science, and tech. Powered by a clean UI and smart timer. Challenge yourself with QuizHub.">
+    <meta property="og:image" content="https://quizhub-pied.vercel.app/assets/quizhub-preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://quizhub-pied.vercel.app/">
+    <meta property="twitter:title" content="QuizHub | Ultimate Quiz App">
+    <meta property="twitter:description" content="Generate, solve, and enjoy quizzes instantly. Clean design, smart timer, and category options. Learn through play on QuizHub.">
+    <meta property="twitter:image" content="https://quizhub-pied.vercel.app/assets/quizhub-preview.png">
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+
+    <!-- Favicon -->
+    <link type="image/png" sizes="16x16" rel="icon" href="./public/images/icons8-quizlet-16.png">
   </head>
   <body>
     <div id="root"></div>
